--- a/coriander/templates/index.html
+++ b/coriander/templates/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1> Meal Planner </h1>
-    <h2> <a href="/add_meal"> </a> Add Meal </h2>
-    <h2> <a href="/plan_meals"> </a> Plan Meals </h2>
+    <h2> <a href="{{ url_for('add_meal') }}"> Add Meal </a>  </h2>
+    <h2> <a href="{{ url_for('prep_meals') }}"> Plan Meals </a>  </h2>
 </html>
