--- a/coriander/templates/add_meal.html
+++ b/coriander/templates/add_meal.html
@@ -1,28 +1,45 @@
 <html>
-    <h1>
-        Add Meal
-    </h1>
+    <head>
+        <title>Meal Planner</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      </head>
 
-    <form id="meal_form" action = "/add_meal" method = "POST">
-        Name<br>
-        <input type = "text" name = "meal_name" /></br>
-        
-        Recipe Link<br>
-        <input type = "text" name = "meal_url" /></br>
+    <body>
+        <div class="row"> 
+            <div class="col sm-3 md-3 lg-3"> </div>
+            <div class="col xs-12 sm-3 md-3 lg-3 text-center"> 
+                <h1>
+                    Add Meal
+                </h1>
 
-        Ingredients <br>
-        <div id="ingredient_list">
-            <input type = "text" name = "ingredient_0" />
+                <form id="meal_form" action = "/add_meal" method = "POST">
+                    Name<br>
+                    <input type = "text" name = "meal_name" /></br>
+                    
+                    Recipe Link<br>
+                    <input type = "text" name = "meal_url" /></br>
+
+                    Ingredients <br>
+                    <div id="ingredient_list">
+                        <input type = "text" name = "ingredient_0" />
+                    </div>
+                    
+                    <br>
+                    <br>
+
+                    <div class="col xs-12 sm-12 md-12 lg-12">
+                        <input class="col sm-4 md-4 lg-4 btn btn-success" type = "submit" value = "Add Meal" />
+                        <button  class="col sm-4 md-4 lg-4 btn btn-info" onclick="addIngredient()">Add Ingredient</button>
+                    </div>
+                </form>
+            </div>
         </div>
         
-        
-        <br>
-        <br>
-        <br>
-        <input type = "submit" value = "Add Meal" /><br>
-     </form>
-     <button onclick="addIngredient()">Add Ingredient</button>
-
+     </body>
     
 
     <script>
