--- a/coriander/templates/success.html
+++ b/coriander/templates/success.html
@@ -1,7 +1,27 @@
 <html>
-    <body>
-        Request Submitted Successfully
+    <head>
+        <title>Meal Planner</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      </head>
 
-        <p> <a href="{{ url_for('index') }}"> Home </a></p>
+    <body>
+
+        <div class="row text-center"> 
+
+        <h2>
+            Request Submitted Successfully
+        </h2>
+        
+
+        <br>
+
+
+        <h2> <a href="{{ url_for('index') }}"> Home </a></h2>
+
+        </div>
     </body>
 </html>
